updated flow and styles

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Cassandra Reinhart's Portfolio"
+      content="Software Development Portfolio site using React"
     />
     <script src="https://kit.fontawesome.com/f5af9756d0.js" crossorigin="anonymous"></script>
     <!--
